Update game screen layout

--- a/GuessingGame/Pages/Index.cshtml
+++ b/GuessingGame/Pages/Index.cshtml
@@ -13,7 +13,8 @@
 
             <div class="container">
                 <input type="text" class="form-control mt-3" name="name" id="name" placeholder="Name" required>
-                <input type="submit" class="btn btn-info mt-3" value="Start game" />
+                <input type="submit" class="btn btn-info mt-3 pt-2 pb-2 pl-5 pr-5" value="Start game" /><br>
+                <a href="/leaderboards" class="btn btn-secondary m-2">Leaderboards</a><br>
             </div>
 
         </form>
