--- a/GuessingGame/Pages/Game.cshtml
+++ b/GuessingGame/Pages/Game.cshtml
@@ -9,19 +9,21 @@
 
 <div class="text-center">
     <h2>Hello @Model.GetGameSession().PlayerName;</h2>
-    <h3>Genereated number - @Model.GetGameSession().NumberToGuess</h3>
+    <h3>@*Genereated number - @Model.GetGameSession().NumberToGuess*@</h3>
 </div>
 
 <div class="centered-inner-div mt-5">
 
     <div class="d-flex centered-inner-div">
         <div class="d-inline-block">
-            <div class="form-group row">
-                <input type="number" class="form-control col-2 text-center inpts" required maxlength="1" min="1" max="9" id="num1" name="num1">
-                <input type="number" class="form-control col-2 text-center inpts" required maxlength="1" min="0" max="9" id="num2" name="num2">
-                <input type="number" class="form-control col-2 text-center inpts" required maxlength="1" min="0" max="9" id="num3" name="num3">
-                <input type="number" class="form-control col-2 text-center inpts" required maxlength="1" min="0" max="9" id="num4" name="num4">
-            </div>
+            <form>
+                <div class="form-group row">
+                    <input type="number" class="form-control col-2 text-center inputs" required min="1" max="9" id="num1" name="num1" />
+                    <input type="number" class="form-control col-2 text-center inputs" required min="0" max="9" id="num2" name="num2" />
+                    <input type="number" class="form-control col-2 text-center inputs" required min="0" max="9" id="num3" name="num3" />
+                    <input type="number" class="form-control col-2 text-center inputs" required min="0" max="9" id="num4" name="num4" />
+                </div>
+            </form>
             <div>
                 <div>
                     <button class="btn btn-info" onclick="GetInput()">Try guess</button>
@@ -49,6 +51,24 @@
 
 <script>
 
+    $(document).ready(function () {
+        $(".inputs").keyup(function () {
+            if ($(this).val() !== "") {
+                $(this).next(".inputs").focus();
+            }
+        });
+
+        var inputs = document.getElementsByClassName("inputs");
+        for (var i = 0; i < inputs.length; i++) {
+            inputs[i].addEventListener('keydown', (e) =>
+            {
+                if (e.key === 'Enter') {
+                    GetInput();
+                }
+            });
+        }
+    });
+
     function GetInput() {
         var num1 = document.getElementById("num1").value;
         var num2 = document.getElementById("num2").value;
@@ -62,7 +82,6 @@
 
     function SendInput(input) {
 
-        console.log("input before reuqest - " + input);
         var dataValue = { "input": input, };
 
         $.ajax({
@@ -86,11 +105,20 @@
                 }
             },
             error: function (error) {
-                console.log("Error");
                 console.log(error);
             }
         });
 
+        ClearInputs();
+
+    }
+
+    function ClearInputs() {
+        var inputs = document.getElementsByClassName("inputs");
+        for (var i = 0; i < inputs.length; i++) {
+            inputs[i].value = "";
+        }
+        inputs[0].focus();
     }
 
 </script>
