--- a/GuessingGame/wwwroot/css/site.css
+++ b/GuessingGame/wwwroot/css/site.css
@@ -75,3 +75,13 @@ body {
     margin: 0 auto;
     width: 70%;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type=number] {
+    -moz-appearance: textfield; /* Firefox */
+}
