--- a/GuessingGame/Pages/Game.cshtml
+++ b/GuessingGame/Pages/Game.cshtml
@@ -9,7 +9,7 @@
 
 <div class="text-center">
     <h2>Hello @Model.GetGameSession().PlayerName;</h2>
-    <h3>@*Genereated number - @Model.GetGameSession().NumberToGuess*@</h3>
+    <h3>Genereated number - @Model.GetGameSession().NumberToGuess</h3>
 </div>
 
 <div class="centered-inner-div mt-5">
