--- a/GuessingGame/Pages/Leaderboards.cshtml
+++ b/GuessingGame/Pages/Leaderboards.cshtml
@@ -3,9 +3,13 @@
 @{
     int index = 1;
 }
+<div class="container">
+    <div class="text-center">
+        <input type="text" id="minGames" name="minGames" placeholder="Min games" class="text-center" />
+    </div>
+</div>
 
-
-<table class="table table-striped">
+<table class="table table-striped mt-3" id="leaderboards-table">
     <thead class="thead-dark">
         <tr>
             <th scope="col">Position</th>
@@ -17,18 +21,80 @@
         </tr>
     </thead>
 
-    @foreach (var record in Model.LeaderboardRecords)
+    @foreach (var record in Model.LeaderboardRecordsList)
     {
         <tbody>
             <tr>
                 <th scope="row">@index @{index++;}</th>
-                <td>@record.Key</td>
-                <td>@record.Value.GamesWon</td>
-                <td>@record.Value.GamesPlayed</td>
-                <td>@record.Value.PrecentOfWinnigGames.ToString("0.##") %</td>
-                <td>@record.Value.AverageTryCount.ToString("0.##")</td>
+                <td>@record.Username</td>
+                <td>@record.GamesWon</td>
+                <td>@record.GamesPlayed</td>
+                <td>@record.PrecentOfWinnigGames.ToString("0.##") %</td>
+                <td>@record.AverageTryCount.ToString("0.##")</td>
             </tr>
         </tbody>
     }
 
 </table>
+
+<script>
+    $(document).ready(function () {
+        $("#minGames").keyup(function () {
+
+            var minGamesInput = $(this).val();
+            var url = "/leaderboards?handler=update&mingames=" + minGamesInput;
+            console.log(url);
+            dataValue = { minGames: minGamesInput };
+
+            $.ajax({
+                type: 'GET',
+                url: url,
+                contentType: 'application/json',
+                dataType: 'json',
+                data: dataValue,
+                success: function (result) {
+                    RedrawTable(result);
+                },
+                error: function (error) {
+                    console.log(error);
+                }
+            });
+
+        });
+
+        function RedrawTable(result) {
+
+            console.log(result);
+
+            $("#leaderboards-table").children().remove();
+            $("#leaderboards-table").append(
+                "<thead class=\"thead-dark\">" +
+                    "<tr>" +
+                        "<th scope =\"col\">Position</th>" +
+                        "<th scope=\"col\">Username</th>" +
+                        "<th scope=\"col\">Games won</th>" +
+                        "<th scope=\"col\">Games played</th>" +
+                        "<th scope=\"col\">% of games wons</th>" +
+                        "<th scope=\"col\">Average tries count</th>" +
+                    "</tr>" +
+                "</thead >");
+
+            for (var i = 0; i < result.length; i++) {
+                $("#leaderboards-table").append("<tbody>");
+                $("#leaderboards-table").append(
+                    "<tr>" +
+                        "<th scope=\"row\">" + (i + 1) + "</th>" +
+                        "<td>" + result[i].username + "</td>" +
+                        "<td>" + result[i].gamesWon + "</td>" +
+                        "<td>" + result[i].gamesPlayed + "</td>" +
+                        "<td>" + result[i].precentOfWinnigGames.toFixed(2) + " %</td>" +
+                        "<td>" + result[i].averageTryCount.toFixed(2) + "</td>" +
+                    "</tr>"
+                );
+
+
+                $("#leaderboards-table").append("</tbody>");
+            }
+        }
+    });
+</script>
