--- a/GuessingGame/Pages/Leaderboards.cshtml
+++ b/GuessingGame/Pages/Leaderboards.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="container">
     <div class="text-center">
-        <input type="text" id="minGames" name="minGames" placeholder="Min games" class="text-center" />
+        <input type="number" id="minGames" name="minGames" placeholder="Min games" class="text-center" />
     </div>
 </div>
 
