--- a/GuessingGame/Pages/Index.cshtml
+++ b/GuessingGame/Pages/Index.cshtml
@@ -10,11 +10,13 @@
 
 
     <p>Program chooses a random secret number with 4 digits. All digits in the secret number are different.</p>
-    <p>You have 8 tries to guess the secret number. After each guess will be displayed the message "M:m; P:p" where:
-    m - number of matching digits but not on the right places and
-    p - number of matching digits on exact places</p>
+    <p>
+        You have 8 tries to guess the secret number. After each guess will be displayed the message "M:m; P:p" where:
+        m - number of matching digits but not on the right places and
+        p - number of matching digits on exact places
+    </p>
     <p>Game ends after 8 tries or if the correct number is guessed.</p>
-    
+
 
     <div class="container col-6">
 
