Add facebook login

--- a/GuessingGame/Pages/Index.cshtml
+++ b/GuessingGame/Pages/Index.cshtml
@@ -30,6 +30,53 @@
 
         </form>
     </div>
-
-
+    <fb:login-button scope="public_profile,email"
+                     onlogin="checkLoginState();">
+    </fb:login-button>
+    <p style="color: red;" id="facebookAuthError"></p>
 </div>
+
+@section Scripts
+{
+
+    <script>
+        window.fbAsyncInit = function () {
+            FB.init({
+                appId: '515578059436602',
+                cookie: true,
+                xfbml: true,
+                version: 'v5.0'
+            });
+
+            FB.AppEvents.logPageView();
+
+        };
+
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) { return; }
+            js = d.createElement(s); js.id = id;
+            js.src = "https://connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+
+        function checkLoginState() {
+            FB.getLoginStatus(function (response) {
+                if (response.status === "connected") {
+
+                    var token = response.authResponse.accessToken;
+                    var url = 'https://graph.facebook.com/me?fields=first_name&access_token=' + token + "/";
+
+                    $.get(url, function (data) {
+                        window.location.href = "/game?name=" + data.first_name;
+                    });
+                }
+                else {
+                    $("#facebookAuthError").text("Unable to login with facebook at this time");
+                }
+               
+            })
+        }
+
+    </script>
+}
